refactor: Mejoras en implementacion de test unitarios
- Se utiliza un builder para generar pacientes necesarios para las pruebas